--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@
                 <includes>
                     <include>**/*.*</include>
                 </includes>
+                <excludes>
+                    <exclude>static/fonts/**</exclude>
+                </excludes>
             </resource>
         </resources>
         <plugins>
